# midicrt

./: .gitignore  AGENTS.md  PERFORMANCE.md  README.md  configutil.py  deep-research-report.md  harmony.py  keytest.py  midicrt.py  midisend  pyproject.toml  run_pixel  run_tui
.ci/: canonical_baseline_sha  fixture_map_exceptions.txt
.github/: CODEOWNERS  pull_request_template.md
config/: chords.csv  scales.csv  settings.json
docs/: baseline_sync_evidence_2026-02-27.md  contributor_tracks.md  fixture_dependency_map.md  interface_connection_hardening_checklist.md  merge_reconciliation_2026-02-27.md  observer_lane_handoff_payloads.md  parallel_dev_playbook.md  parallel_execution_board.md  parallel_pilot_evidence_index.md  parallel_pilot_report_2026-02-26.md  parallel_readiness_checklist.md  pilot_incident_log_template.md  session_notes_2026-02-26_runtime_perf_and_observer.md
dotfiles/: tmux.conf
engine/: __init__.py  core.py  ipc.py  legacy_page_router.py  page_contracts.py  scheduler.py
fb/: compositor.py  compositor_renderer.py  psf_font.py  terminal_capture.py
midicrt/: instruments.txt  log.txt  meters.py.bak  midicrt.py  midicrt.py7  notes.py.bak  timeclock.py.bak2
pages/: audiospectrum.py  ccgraph.py  ccmonitor.py  chordkey.py  configui.py  eventlog.py  help.py  img2txtviz.py  legacy_contract_bridge.py  notes.py  pianoroll.py  pianoroll_exp.py  proglog.py  sendnotes.py  stuckheat.py  timesig_exp.py  transport.py  tuner.py  voicemon.py
plugins/: beat_counter.py  loopprogress.py  pagecycle.py  polydisplay.py  sysex.py  timeclock.py  zharmony.py  (+5 more)
(+228 files in other folders)
